# parallelized-image-scanner

./: README.md  threshold.sln
threshold/: CMakeLists.txt  main.cpp  threshold.vcxproj
threshold/VTune Profiler Results/threshold/: threshold.vtuneproj
threshold/VTune Profiler Results/threshold/r000tr/: r000tr.vtune
threshold/VTune Profiler Results/threshold/r000tr/config/: collection.cfg  context_values.cfg  runss.options  state.cfg
threshold/VTune Profiler Results/threshold/r000tr/data.0/: 22012-42852.0-12636.0.th  22012-42852.0-12636.0.th.aux  22012-42852.0-19740.0.th  22012-42852.0-19740.0.th.aux  22012-42852.0-21036.0.th  22012-42852.0-21036.0.th.aux  22012-42852.0-21568.0.th  22012-42852.0-21568.0.th.aux  22012-42852.0-27488.0.th  22012-42852.0-27488.0.th.aux  22012-42852.0-33076.0.th  22012-42852.0-33076.0.th.aux  22012-42852.0-33600.0.th  22012-42852.0-33600.0.th.aux  22012-42852.0-36352.0.th  22012-42852.0-36352.0.th.aux  22012-42852.0-37248.0.th  22012-42852.0-37248.0.th.aux  22012-42852.0-38028.0.th  22012-42852.0-38028.0.th.aux  22012-42852.0-38712.0.th  22012-42852.0-38712.0.th.aux  22012-42852.0-39932.0.th  22012-42852.0-39932.0.th.aux  22012-42852.0-39948.0.th  22012-42852.0-39948.0.th.aux  22012-42852.0-4100.0.th  22012-42852.0-4100.0.th.aux  22012-42852.0-41144.0.th  22012-42852.0-41144.0.th.aux  22012-42852.0-4160.0.th  22012-42852.0-4160.0.th.aux  22012-42852.0-42844.0.th  22012-42852.0-42844.0.th.aux  22012-42852.0-42868.0.th  22012-42852.0-42868.0.th.aux  22012-42852.0-43752.0.th  22012-42852.0-43752.0.th.aux  22012-42852.0-44068.0.th  22012-42852.0-44068.0.th.aux  (+8 more)
threshold/VTune Profiler Results/threshold/r001hs/: MasterCollectionFlag.infoamplxe  r001hs.vtune
threshold/VTune Profiler Results/threshold/r001hs/config/: context_values.cfg  log.cfg  runss.options
threshold/VTune Profiler Results/threshold/r001hs/data.0/: 23560-39140.0-13052.0.th  23560-39140.0-13052.0.th.aux  23560-39140.0-26512.0.th  23560-39140.0-26512.0.th.aux  23560-39140.0-30772.0.th  23560-39140.0-30772.0.th.aux  23560-39140.0-32116.0.th  23560-39140.0-32116.0.th.aux  23560-39140.0-33260.0.th  23560-39140.0-33260.0.th.aux  23560-39140.0-45340.0.th  23560-39140.0-45376.0.th  23560-39140.0-45376.0.th.aux  23560-39140.0.trace  (+7 more)
threshold/VTune Profiler Results/threshold/r002tr/: r002tr.vtune
(+68 files in other folders)
